--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -125,6 +125,7 @@ jobs:
       if: matrix.headers == 'User' && matrix.os == 'windows-latest'
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
+        -DVIZ_OFFLINE_BUILD=ON
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
@@ -135,6 +136,7 @@ jobs:
       if: matrix.headers == 'User' && matrix.os != 'windows-latest'
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
+        -DVIZ_OFFLINE_BUILD=ON
         -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
